--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
 			<version>4.3.10.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.7.2.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
